; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_sock.c___sk_free.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_sock.c___sk_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sock*)* @__sk_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__sk_free(%struct.sock* %0) #0 {
  %2 = alloca %struct.sock*, align 8
  store %struct.sock* %0, %struct.sock** %2, align 8
  %3 = load %struct.sock*, %struct.sock** %2, align 8
  %4 = getelementptr inbounds %struct.sock, %struct.sock* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = call i64 @likely(i64 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.sock*, %struct.sock** %2, align 8
  %10 = call i32 @sock_net(%struct.sock* %9)
  %11 = call i32 @sock_inuse_add(i32 %10, i32 -1)
  br label %12

12:                                               ; preds = %8, %1
  %13 = load %struct.sock*, %struct.sock** %2, align 8
  %14 = getelementptr inbounds %struct.sock, %struct.sock* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %12
  %18 = load %struct.sock*, %struct.sock** %2, align 8
  %19 = call i64 @sock_diag_has_destroy_listeners(%struct.sock* %18)
  %20 = icmp ne i64 %19, 0
  br label %21

21:                                               ; preds = %17, %12
  %22 = phi i1 [ false, %12 ], [ %20, %17 ]
  %23 = zext i1 %22 to i32
  %24 = call i64 @unlikely(i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %21
  %27 = load %struct.sock*, %struct.sock** %2, align 8
  %28 = call i32 @sock_diag_broadcast_destroy(%struct.sock* %27)
  br label %32

29:                                               ; preds = %21
  %30 = load %struct.sock*, %struct.sock** %2, align 8
  %31 = call i32 @sk_destruct(%struct.sock* %30)
  br label %32

32:                                               ; preds = %29, %26
  ret void
}

declare dso_local i64 @likely(i64) #1

declare dso_local i32 @sock_inuse_add(i32, i32) #1

declare dso_local i32 @sock_net(%struct.sock*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i64 @sock_diag_has_destroy_listeners(%struct.sock*) #1

declare dso_local i32 @sock_diag_broadcast_destroy(%struct.sock*) #1

declare dso_local i32 @sk_destruct(%struct.sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
